quick fix for aligning global stats in world map

--- a/src/Components/WorldMap/WorldMap.css
+++ b/src/Components/WorldMap/WorldMap.css
@@ -1,7 +1,7 @@
 .globalStatsList {
   list-style-type: none;
-  margin-bottom: 2em;
-  margin-right: 2em;
+  padding: 0;
+  margin: 0;
 }
 
 .worldMap {
